syntax = "proto3";

package inference.grpc;

import "common.proto";

// ============================================================================
// vLLM Engine Service
// ============================================================================
// The vLLM engine service implements the gRPC interface for vLLM workers.
// All message types are imported from common.proto and shared with SGLang.
//
// Note: vLLM supports a subset of fields in the common messages:
// - Core fields: output_ids, finish_reason, token counts, basic logprobs
// - Defaults for: matched_stop, index, hidden_states, advanced logprobs

service VllmEngine {
  // Submit a generation request (supports streaming)
  rpc Generate(GenerateRequest) returns (stream GenerateResponse);

  // Submit an embedding request
  rpc Embed(EmbedRequest) returns (EmbedResponse);

  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // Abort a running request
  rpc Abort(AbortRequest) returns (AbortResponse);

  // Get model information
  rpc GetModelInfo(GetModelInfoRequest) returns (GetModelInfoResponse);

  // Get server information
  rpc GetServerInfo(GetServerInfoRequest) returns (GetServerInfoResponse);
}
